# RestServer

./: .gitignore  BashBuild.sh  CMakeLists.txt  README.md
data/: sample.json  test1.txt  test2.txt
src/: .main.cpp.kate-swp  a.out  main.cpp  main2.cpp  main3.cpp  main4.cpp
